re editing services

--- a/services.html
+++ b/services.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>adding more data in services page</h1>
+    <h1>adding more data in services </h1>
 </body>
 </html>
