--- a/services.html
+++ b/services.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>adding more data in services ft/service-redesign</h1>
+    <p>I am changes on main page</p>
 </body>
 </html>
